--- a/httpd.conf
+++ b/httpd.conf
@@ -546,7 +546,7 @@ SSLRandomSeed connect builtin
 	Redirect permanent / /transmission/web/
 
 	ProxyPreserveHost On
-	ProxyPass "/transmission/web/ipcheck" "http://ipcheck/ipcheck.php"
+	ProxyPass "/transmission/web/ipcheck" "http://transmission_ipcheck/ipcheck.php"
 	ProxyPass "/transmission" "http://transmission:9091/transmission"
 	ProxyPassReverse "/transmission/web/" "http://transmission:9091/transmission/web/"
 </IfModule>
