--- a/httpd.conf
+++ b/httpd.conf
@@ -550,3 +550,11 @@ SSLRandomSeed connect builtin
 	ProxyPass "/transmission" "http://transmission:9091/transmission"
 	ProxyPassReverse "/transmission/web/" "http://transmission:9091/transmission/web/"
 </IfModule>
+
+<Location />
+	AuthType Basic
+	AuthBasicProvider file
+	AuthName "Service Username & Password"
+	AuthUserFile /etc/htpasswd
+	require valid-user
+</Location>
